[gd_scene load_steps=3 format=3 uid="uid://cud61htxj6j3q"]

[ext_resource type="Script" path="res://bullet.gd" id="1_67ymf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ji5vc"]
size = Vector2(10, 6)

[node name="PlayerBullet" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_67ymf")

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(5, 0)
color = Color(1, 0.466667, 0.513726, 1)
offset = Vector2(-5, 0)
polygon = PackedVector2Array(0, 3, 0, -3, 10, -3, 10, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 0)
shape = SubResource("RectangleShape2D_ji5vc")

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
